packages/kotlin/ttrp-frontend/src/test/resources/negative/prs-004-named-union.ttrp
u = union(in1: a, in2: b)
